Closed Bug 299723 Opened 21 years ago Closed 21 years ago

[FIXr]Table attribute RULES doesn't seem to recognize "none" and other values work strangely

Categories

(Core :: Layout: Tables, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.8beta3

People

(Reporter: surrano, Assigned: bzbarsky)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+ The simple example url works as expected in IE or Firefox 1.0, but produces an unfortunate thin grid in Deer Park Alpha 1. I wonder if it's not a bug but a stricter interpretation of the HTML standard in 1.8, and if so, what is the correct solution? 1. If I use BORDER(>0), FRAME(above) and RULES(none), the frame "above" is correct, but a thin grid around each cell is drawn (that violates RULES=none) 2. If I change RULES to groups or rows, the thin lines disappear, but the frame seems to be overdrawn by two half-thick lines. 3. If I omit BORDER (RULES back to none), there's a thin frame "above" and no other grid lines, but then I can't influence the line width. Reproducible: Always Steps to Reproduce: Create a TABLE with BORDER="10px" RULES="none" FRAME="above" CELLSPACING="0" The latter two are not mandatory, just allows you to see more. Actual Results: got a table with thin grids, contradictory with RULES=none. Expected Results: draw a table without any lines except the thick line above the table.
Component: General → Layout: Tables
Keywords: testcase
Product: Firefox → Core
QA Contact: general → layout.tables
Version: unspecified → Trunk
Keywords: regression
Actually, this is a regression from bug 155507. The problem is that the table attribute-mapping code is pretty silly; it maps in a computed style for cells based on the table's border no matter what. It used to be that the cell borders got nixed later as part of collapsed border processing here, but that's not happening for rules="none" anymore...
Blocks: 155507
No longer blocks: 290377
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → bzbarsky
OS: Windows 2000 → All
Priority: -- → P1
Hardware: PC → All
Summary: Table attribute RULES doesn't seem to recognize "none" and other values work strangely → [FIX]Table attribute RULES doesn't seem to recognize "none" and other values work strangely
Target Milestone: --- → mozilla1.8beta3
Attached patch Fix — — Splinter Review
Attachment #188342 - Flags: superreview?(dbaron)
Attachment #188342 - Flags: review?(dbaron)
Attachment #188342 - Flags: superreview?(dbaron)
Attachment #188342 - Flags: superreview+
Attachment #188342 - Flags: review?(dbaron)
Attachment #188342 - Flags: review+
Comment on attachment 188342 [details] [diff] [review] Fix requesting 1.8b3 approval. This is a quite safe fix for a regression in rendering of tables with rules="none".
Attachment #188342 - Flags: approval1.8b3?
Summary: [FIX]Table attribute RULES doesn't seem to recognize "none" and other values work strangely → [FIXr]Table attribute RULES doesn't seem to recognize "none" and other values work strangely
Attachment #188342 - Flags: approval1.8b3? → approval1.8b3+
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
This bug is pretty much the same as bug 172213
Gérard, I was just fixing a regression, but did this patch actually fix all the issues in bug 172213?
Blocks: 172213
Boris, the way I see this: this bug was a duplicate of bug 172213. Either way, as long as the problem is fixed, I don't really care :) I'm using Firefox Deer Park alpha 1 build 20050707 under XP Pro SP2 and do not see the fix when I try attachment 188325 [details] or attachment 101453 [details] or attachment 112626 [details]. I'll definately try with tomorrow's build.
It wasn't quite a duplicate, since bug 172213 is present in Firefox 1.0, and this bug as filed was not. But yes, if you could test with tomorrow's builds, that would be great!
Excellent work, Boris. attachment 188325 [details], attachment 101453 [details] and attachment 112626 [details] all render expected results with Deer Park alpha 2 rv: 1.8b3 build 20050708 under XP Pro SP2. Thank you :) Marking as VERIFIED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: