Fix rules="none" regression for tables.  Bug 299723, r+sr=dbaron, a=asa